<resources>
    <string name="app_name">demoMesing</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="crud_home">Mant. Menu</string>
    <string name="crud_profile">Mant. Perfil</string>
    <string name="crud_rol">Mant. Rol</string>
    <string name="profile">Perfil</string>
    <string name="search">Busqueda</string>
    <string name="reg_profile">Reg. Perfil</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
