<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.home.HomeActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/hori_scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.viewpager.widget.ViewPager>

    <HorizontalScrollView
        android:id="@+id/hori_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.gauravk.bubblenavigation.BubbleNavigationLinearView
            android:id="@+id/bottom_navigation_view_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="8dp"
            android:orientation="horizontal"
            android:padding="12dp">

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_active="true"
                app:bt_colorActive="@color/red_active"
                app:bt_colorInactive="@color/red_inactive"
                app:bt_icon="@drawable/ic_home"
                app:bt_shape="@drawable/transition_background_drawable_home"
                app:bt_title="@string/crud_home" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_badgeBackgroundColor="@color/green_active"
                app:bt_colorActive="@color/blue_active"
                app:bt_colorInactive="@color/blue_inactive"
                app:bt_icon="@drawable/ic_account"
                app:bt_shape="@drawable/transition_background_drawable_search"
                app:bt_title="@string/crud_profile" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_profile_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_colorActive="@color/blue_grey_active"
                app:bt_colorInactive="@color/blue_grey_inactive"
                app:bt_icon="@drawable/ic_account"
                app:bt_shape="@drawable/transition_background_drawable_like"
                app:bt_title="@string/crud_rol" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_colorActive="@color/green_active"
                app:bt_colorInactive="@color/green_inactive"
                app:bt_icon="@drawable/ic_person"
                app:bt_shape="@drawable/transition_background_drawable_list"
                app:bt_title="@string/profile" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_colorActive="@color/purple_active"
                app:bt_colorInactive="@color/purple_inactive"
                app:bt_icon="@drawable/ic_search"
                app:bt_shape="@drawable/transition_background_drawable_person"
                app:bt_title="@string/search" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_specialist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_colorActive="@color/orange_active"
                app:bt_colorInactive="@color/orange_inactive"
                app:bt_icon="@drawable/ic_edit"
                app:bt_shape="@drawable/transition_background_drawable_person"
                app:bt_title="@string/reg_profile" />
        </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>